@@ -39,7 +39,7 @@ static void stem_print(int close, int dist, int ndigits)
 static Rboolean
 stem_leaf(double *x, int n, double scale, int width, double atom)
 {
-    double r, c;
+    double r, c, x1, x2;
     int mm, mu, k, i, j, hi, lo, xi;
     int ldigits, hdigits, ndigits, pdigits;
 
@@ -49,13 +49,22 @@ stem_leaf(double *x, int n, double scale, int width, double atom)
 	return FALSE;
 
     Rprintf("\n");
-    r = atom+(x[n-1]-x[0])/scale;
-    c = pow(10.,(11.-(int)(log10(r)+10)));
-    mm = imin2(2, imax2(0, (int)(r*c/25)));
-    k = 3*mm + 2 - 150/(n+50);
-    if ((k-1)*(k-2)*(k-5)==0)
-	c *= 10.;
-
+    if(x[n-1] > x[0]) {
+	r = atom+(x[n-1]-x[0])/scale;
+	c = pow(10.,(11.-(int)(log10(r)+10)));
+	mm = imin2(2, imax2(0, (int)(r*c/25)));
+	k = 3*mm + 2 - 150/(n+50);
+	if ((k-1)*(k-2)*(k-5)==0)
+	    c *= 10.;
+	/* need to ensure that x[i]*c does not integer overflow */
+	x1 = fabs(x[0]); x2 = fabs(x[n-1]);
+	if(x2 > x1) x1 = x2;
+	while(x1*c > INT_MAX) c /= 10;
+    } else {
+	r = atom + fabs(x[0])/scale;
+	c = pow(10.,(11.-(int)(log10(r)+10)));
+    }
+    
     mu = 10;
     if (k*(k-4)*(k-8)==0) mu = 5;
     if ((k-1)*(k-5)*(k-6)==0) mu = 20;
